--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "vk-apps-redactor",
   "version": "1.0.0",
   "description": "",
+  "homepage": "http://akrisvui.github.io/vk-app-redactor/",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=1088 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "vk-miniapps-deploy"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
     "fetch-jsonp": "^1.1.3",
+    "gh-pages": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
